# DeviceMCP

./: pyproject.toml  readme.md  server.py
core/: __init__.py  base.py  models.py
tests/: test_device_info.py
utils/: __init__.py  formatters.py  platform_detector.py
